# solar-audio

./: .gitignore  README.md  build_ios.sh  generate_test_wav.py  test_recording.py
engine/: Cargo.toml  VST3_TESTING.md  build.rs
engine/lib/: sdk_common.lib  sdk_hosting.lib
engine/src/: api.rs  audio_file.rs  audio_graph.rs  audio_input.rs  effects.rs  ffi.rs  lib.rs  midi.rs  midi_input.rs  midi_recorder.rs  project.rs  recorder.rs  synth.rs  track.rs  vst3_host.rs
engine/src/api/: effects.rs  helpers.rs  init.rs  latency.rs  midi_clips.rs  midi_input.rs  mod.rs  project.rs  recording.rs  remaining.rs  synthesizer.rs  timing.rs  tracks.rs  transport.rs  vst3.rs
engine/src/export/: dither.rs  metadata.rs  mod.rs  mp3.rs  normalize.rs  options.rs  progress.rs  resample.rs  stems.rs  wav.rs
engine/vst3_host/: CMakeLists.txt  README.md  vst3_host.cpp  vst3_host.h  vst3_host_mac.mm  vst3_host_win.cpp
engine/vst3_host/build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  vst3_host.slnx  vst3_host.vcxproj  vst3_host.vcxproj.filters
engine/vst3_host/build_win/lib/Release/: base.lib  pluginterfaces.lib  vst3_host.lib
engine/vst3_host/build_win/vst3_host.dir/Release/vst3_host.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  vst3_host.lastbuildstate
engine/vst3_host/build_win/vst3sdk_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  base.vcxproj  base.vcxproj.filters  cmake_VST_modules.vcxproj  cmake_VST_modules.vcxproj.filters  cmake_install.cmake  cmake_modules.vcxproj  cmake_modules.vcxproj.filters  pluginterfaces.vcxproj  pluginterfaces.vcxproj.filters  sdk.vcxproj  sdk.vcxproj.filters  sdk_common.vcxproj  sdk_common.vcxproj.filters  sdk_hosting.vcxproj  sdk_hosting.vcxproj.filters  vstgui_support.vcxproj  vstgui_support.vcxproj.filters  vstsdk.slnx
engine/vst3_host/build_win/vst3sdk_build/VSTGUI.build/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
engine/vst3_host/build_win/vst3sdk_build/VSTGUI.build/vstgui/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
engine/vst3_host/build_win/vst3sdk_build/VSTGUI.build/vstgui/lib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vstgui.vcxproj  vstgui.vcxproj.filters
engine/vst3_host/build_win/vst3sdk_build/VSTGUI.build/vstgui/standalone/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vstgui_standalone.vcxproj  vstgui_standalone.vcxproj.filters
engine/vst3_host/build_win/vst3sdk_build/VSTGUI.build/vstgui/uidescription/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vstgui_uidescription.vcxproj  vstgui_uidescription.vcxproj.filters
engine/vst3_host/build_win/vst3sdk_build/VSTGUI.build/vstgui/uidescription-scripting/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vstgui_uiscripting.vcxproj  vstgui_uiscripting.vcxproj.filters
engine/vst3_host/build_win/vst3sdk_build/base.dir/Release/base.tlog/: CL.41092.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  base.lastbuildstate
engine/vst3_host/build_win/vst3sdk_build/pluginterfaces.dir/Release/pluginterfaces.tlog/: CL.52532.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
engine/vst3_host/build_win/vst3sdk_build/public.sdk/samples/vst/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
engine/vst3_host/build_win/vst3sdk_build/public.sdk/samples/vst-hosting/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
engine/vst3_host/build_win/vst3sdk_build/public.sdk/samples/vst-hosting/audiohost/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
engine/vst3_host/build_win/vst3sdk_build/public.sdk/samples/vst-hosting/editorhost/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  editorhost.vcxproj  editorhost.vcxproj.filters
engine/vst3_host/build_win/vst3sdk_build/public.sdk/samples/vst-hosting/inspectorapp/: INSTALL.vcxproj  INSTALL.vcxproj.filters  VST3Inspector.vcxproj  VST3Inspector.vcxproj.filters  cmake_install.cmake
engine/vst3_host/build_win/vst3sdk_build/public.sdk/samples/vst-hosting/validator/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  validator.vcxproj  validator.vcxproj.filters
engine/vst3_host/build_win/vst3sdk_build/public.sdk/samples/vst-utilities/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
engine/vst3_host/build_win/vst3sdk_build/public.sdk/samples/vst-utilities/moduleinfotool/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  moduleinfotool.vcxproj  moduleinfotool.vcxproj.filters
engine/vst3_host/build_win/vst3sdk_build/sdk.dir/Release/sdk.tlog/: CL.45352.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
engine/vst3_host/build_win/vst3sdk_build/sdk_common.dir/Release/sdk_common.tlog/: CL.54136.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
engine/vst3_host/build_win/vst3sdk_build/sdk_hosting.dir/Release/sdk_hosting.tlog/: CL.20144.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
engine/vst3_host/build_win/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
engine/vst3_host/build_win/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
engine/vst3_host/build_win/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
engine/vst3_host/build_win/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
(+280 files in other folders)
